--- a/front/info.tex
+++ b/front/info.tex
@@ -4,25 +4,25 @@
 % -------------------------------------------------------
 
 \newcommand{\ThesisType}
-{پایان‌نامه}  % پایان‌نامه / رساله
+{رساله}  % پایان‌نامه / رساله
 \newcommand{\ThesisDegree}
-{کارشناسی ارشد}  % کارشناسی / کارشناسی ارشد / دکتری
+{دکتری}  % کارشناسی / کارشناسی ارشد / دکتری
 \newcommand{\ThesisMajor}
-{مهندسی کامپیوتر}  % نام رشته / گرایش
+{علوم کامپیوتر}  % نام رشته / گرایش
 \newcommand{\ThesisTitle}
-{قالب استاندارد برای نگارش پایان‌نامه‌ها}  % عنوان پایان‌نامه / رساله
+{کوچکترین مجموعه یال‌های بازخورد}  % عنوان پایان‌نامه / رساله
 \newcommand{\ThesisAuthor}
-{نام دانشجو}  % نام نویسنده
+{مجتبی استواری}  % نام نویسنده
 \newcommand{\ThesisSupervisor}
-{استاد راهنمای پروژه}  % نام استاد راهنما
+{علیرضا زارعی}  % نام استاد راهنما
 \newcommand{\ThesisAdvisor}
 {استاد مشاور}  
 \newcommand{\ThesisExaminer}
 {استاد ممتحن}
 \newcommand{\ThesisDate}
-{شهریور ۱۴۰۳}
+{مهر ۱۴۰۳}
 \newcommand{\ThesisDepartment}
-{دانشکده مهندسی کامپیوتر}
+{دانشکده ریاضی }
 \newcommand{\ThesisUniversity}
 {دانشگاه صنعتی شریف}
 
@@ -30,16 +30,16 @@
 %  English Information
 % -------------------------------------------------------
 
-\newcommand{\EnglishThesisDegree}{M.Sc.}
+\newcommand{\EnglishThesisDegree}{Ph.D.}
 
-\newcommand{\EnglishThesisTitle}{A Standard Template for Typesetting Theses in Persian}
+\newcommand{\EnglishThesisTitle}{The Minimum Feedback Arc Set}
 
-\newcommand{\EnglishThesisAuthor}{The Author}
+\newcommand{\EnglishThesisAuthor}{Mojtaba Ostovari}
 
-\newcommand{\EnglishThesisSupervisor}{Dr. Supervisor}
+\newcommand{\EnglishThesisSupervisor}{Dr. Alireza Zarei}
 
 \newcommand{\EnglishThesisDate}{September 2024}
 
-\newcommand{\EnglishThesisDepartment}{Department of Computer Engineering}
+\newcommand{\EnglishThesisDepartment}{Department of Mathematical Science}
 
 \newcommand{\EnglishThesisUniversity}{Sharif University of Technology}
